Refactor geometry to better API. Still need a bit of work to extract behaviors from the plugin.

--- a/src/MiNET/MiNET/Net/MCPE Protocol.tt
+++ b/src/MiNET/MiNET/Net/MCPE Protocol.tt
@@ -43,6 +43,7 @@ using System.Net;
 using System.Numerics;
 using System.Threading;
 using MiNET.Utils; 
+using MiNET.Utils.Skins;
 using MiNET.Items;
 using MiNET.Crafting;
 using little = MiNET.Utils.Int24; // friendly name
