Fix PlayerMob skin update changes. Don't crash the client. Refactor MiNET Client to make it easier to use it standalone. Have a message handler interface it is working from that can be overriden via a property.

--- a/src/MiNET/MiNET/Net/MCPE Protocol.tt
+++ b/src/MiNET/MiNET/Net/MCPE Protocol.tt
@@ -73,6 +73,20 @@ foreach (XmlNode pdu in doc.SelectNodes("//pdu[not(@namespace='raknet') and @cli
 #>
 	}
 
+	public interface IMcpeClientMessageHandler
+	{
+<#	
+
+
+foreach (XmlNode pdu in doc.SelectNodes("//pdu[not(@namespace='raknet') and @server='true']"))
+{
+#>
+		void Handle<#= CodeTypeName(pdu.Attributes["name"].Value) #>(<#= CodeTypeName(pdu.Attributes["name"].Value) #> message);
+<#	
+} // foreach
+#>
+	}
+
 	public class PacketFactory
 	{
 		public static Packet Create(byte messageId, byte[] buffer, string ns)
