Moving to Memory<> and Span<> ever so slowely.

--- a/src/MiNET/MiNET/Net/MCPE Protocol.tt
+++ b/src/MiNET/MiNET/Net/MCPE Protocol.tt
@@ -113,7 +113,7 @@ foreach (XmlNode pdu in doc.SelectNodes("//pdu[not(@namespace='raknet') and @ser
 
 	public class PacketFactory
 	{
-		public static Packet Create(byte messageId, byte[] buffer, string ns)
+		public static Packet Create(byte messageId, ReadOnlyMemory<byte> buffer, string ns)
 		{
 			Packet packet = null; 
 			if(ns == "raknet") 
