More refactoring. Renamed ServerInfo to ConnectionInfo to better reflect what it does. Moved all datagram processing to RakConnection to be able to replace that with TCP.

--- a/src/MiNET/MiNET/Net/MCPE Protocol.tt
+++ b/src/MiNET/MiNET/Net/MCPE Protocol.tt
@@ -136,9 +136,7 @@ foreach (XmlNode pdu in doc.SelectNodes("//pdu[@namespace='raknet']"))
 {
 #>
 					case <#= pdu.Attributes["id"].Value #>:
-						packet = <#= CodeTypeName(pdu.Attributes["name"].Value) #>.CreateObject();
-						packet.Decode(buffer);
-						return packet;
+						return <#= CodeTypeName(pdu.Attributes["name"].Value) #>.CreateObject().Decode(buffer);
 <#	
 } // foreach
 #>
@@ -152,9 +150,7 @@ foreach (XmlNode pdu in doc.SelectNodes("//pdu[@namespace='ftl']"))
 {
 #>
 					case <#= pdu.Attributes["id"].Value #>:
-						packet = <#= CodeTypeName(pdu.Attributes["name"].Value) #>.CreateObject();
-						packet.Decode(buffer);
-						return packet;
+						return <#= CodeTypeName(pdu.Attributes["name"].Value) #>.CreateObject().Decode(buffer);
 <#	
 } // foreach
 #>
@@ -168,9 +164,7 @@ foreach (XmlNode pdu in doc.SelectNodes("//pdu[not(@namespace='raknet') and not(
 {
 #>
 					case <#= pdu.Attributes["id"].Value #>:
-						packet = <#= CodeTypeName(pdu.Attributes["name"].Value) #>.CreateObject();
-						packet.Decode(buffer);
-						return packet;
+						return <#= CodeTypeName(pdu.Attributes["name"].Value) #>.CreateObject().Decode(buffer);
 <#	
 } // foreach
 #>
